# PCom

./: README.md
Labs/Lab10_HTTP/: client.c  requests.c
Labs/Lab11_Email/: send_mail.c
Labs/Lab12_OpenSSL/: Cristian_Cotovanu_324CD_Lab12PC.odt
Labs/Lab13_Securitate/: Makefile  https_client.c
Labs/Lab1_Intro/: cat.c  sursa  test
Labs/Lab2_Protocol-STOP-and-WAIT/: input.in  input.in_out  recv.c  send.c
Labs/Lab3_Protocol-cu-fereastra-glisanta/: recv.c  send.c
Labs/Lab3_Protocol-cu-fereastra-glisanta/link_emulator/: lib.h
Labs/Lab4_Forwarding/: router  router.c  skel.h
Labs/Lab5_ICMP/: README  icmp.c  utils.h
Labs/Lab6_UDP-Sockets/: client.c  file  fisier  server.c
Labs/Lab7_TCP/: client.c  helpers.h  server.c
Labs/Lab8_TCP_MultiplexareIO/: client.c  server.c
Labs/Lab9_DNS/: Lab9_DNS.odt  cereri.txt  dns.c
Projects/Client-Server-Application/: CMakeLists.txt  Makefile  README.md  server.cpp  server.h  subscriber.cpp  subscriber.h  udp_client.py  utils.h
Projects/RestAPI-Client/: CMakeLists.txt  Makefile  README.md  buffer.cpp  buffer.h  client  client.cpp  connection.cpp  connection.h  json.hpp  requests.cpp  requests.h  utils.cpp  utils.h
Projects/Router-forwarding/: README.md  router.cpp  skel.cpp
Projects/Router-forwarding/include/: debug.h  parse_route.h  skel.h
